--- a/app/src/main/res/layout/layout_game_6player_listitem.xml
+++ b/app/src/main/res/layout/layout_game_6player_listitem.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,119 +10,189 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="15"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="15" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textViewPlayer1Score"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="-20"
-        app:layout_constraintStart_toEndOf="@+id/textViewRound"
-        app:layout_constraintTop_toTopOf="@+id/textViewRound" />
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="-20" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/textViewPlayer1Guess"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="10"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer1Score"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer1Score" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="10" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textViewPlayer2Score"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="-20"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer1Guess"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer1Guess" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="-20" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/textViewPlayer2Guess"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="10"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer2Score"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer2Score" />
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:text="10" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textViewPlayer3Score"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="-20"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer2Guess"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer2Guess" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="-20" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/textViewPlayer3Guess"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="10"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer3Score"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer3Score" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="10" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textViewPlayer4Score"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="-20"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer3Guess"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer3Guess" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="-20" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/textViewPlayer4Guess"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="10"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer4Score"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer4Score" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="10" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textViewPlayer5Score"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="-20"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer4Guess"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer4Guess" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="-20" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/textViewPlayer5Guess"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="10"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer5Score"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer5Score" />
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:text="10" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textViewPlayer6Score"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="-20"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer5Guess"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer5Guess" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="-20" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/textViewPlayer6Guess"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="10"
-        app:layout_constraintStart_toEndOf="@+id/textViewPlayer6Score"
-        app:layout_constraintTop_toTopOf="@+id/textViewPlayer6Score" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="10" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
