--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -22,51 +22,69 @@
       android:id="@+id/textViewGamePlayer1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:layout_marginStart="2dp"
+      android:layout_marginEnd="2dp"
       android:text="TextView"
-      app:layout_constraintStart_toEndOf="@+id/textViewGameRound"
-      app:layout_constraintTop_toTopOf="@+id/textViewGameRound"/>
+      android:textAlignment="center"
+      app:layout_constraintEnd_toStartOf="@+id/guideline03"
+      app:layout_constraintStart_toStartOf="@+id/guideline"
+      app:layout_constraintTop_toBottomOf="@+id/buttonGameBid"/>
     <TextView
       android:id="@+id/textViewGamePlayer2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="2dp"
+      android:layout_marginEnd="2dp"
       android:text="TextView"
-      app:layout_constraintStart_toEndOf="@+id/textViewGamePlayer1"
+      android:textAlignment="center"
+      app:layout_constraintEnd_toStartOf="@+id/guideline05"
+      app:layout_constraintStart_toStartOf="@+id/guideline03"
       app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer1"/>
     <TextView
       android:id="@+id/textViewGamePlayer3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="2dp"
+      android:layout_marginEnd="2dp"
       android:text="TextView"
-      app:layout_constraintStart_toEndOf="@+id/textViewGamePlayer2"
+      android:textAlignment="center"
+      app:layout_constraintEnd_toStartOf="@+id/guideline07"
+      app:layout_constraintStart_toStartOf="@+id/guideline05"
       app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer2"/>
     <TextView
       android:id="@+id/textViewGamePlayer4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="2dp"
+      android:layout_marginEnd="2dp"
       android:text="TextView"
-      app:layout_constraintStart_toEndOf="@+id/textViewGamePlayer3"
+      android:textAlignment="center"
+      app:layout_constraintEnd_toStartOf="@+id/guideline09"
+      app:layout_constraintStart_toStartOf="@+id/guideline07"
       app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer3"/>
     <TextView
       android:id="@+id/textViewGamePlayer5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="2dp"
+      android:layout_marginEnd="2dp"
       android:text="TextView"
-      app:layout_constraintStart_toEndOf="@+id/textViewGamePlayer4"
+      android:textAlignment="center"
+      app:layout_constraintEnd_toStartOf="@+id/guideline11"
+      app:layout_constraintStart_toStartOf="@+id/guideline09"
       app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer4"/>
     <TextView
       android:id="@+id/textViewGamePlayer6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="2dp"
+      android:layout_marginEnd="2dp"
       android:text="TextView"
-      app:layout_constraintStart_toEndOf="@+id/textViewGamePlayer5"
+      android:textAlignment="center"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline11"
       app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer5"/>
-    <TextView
-      android:id="@+id/textViewGameRound"
-      android:layout_width="30dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/buttonGameBid"/>
     <Button
       android:id="@+id/buttonGameBid"
       android:layout_width="wrap_content"
@@ -84,4 +102,46 @@
       android:text="@string/buttonGameTricks"
       app:layout_constraintStart_toEndOf="@+id/buttonGameBid"
       app:layout_constraintTop_toTopOf="@+id/buttonGameBid"/>
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.07"/>
+
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline03"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.225"/>
+
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline05"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.38"/>
+
+
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline07"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.535"/>
+
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline09"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.69"/>
+
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline11"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.845"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
