--- a/app/src/main/res/layout/layout_game_6player_listitem.xml
+++ b/app/src/main/res/layout/layout_game_6player_listitem.xml
@@ -1,198 +1,313 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textViewRound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="15" />
+      android:id="@+id/textViewRound"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="4dp"
+      android:text="15"
+      android:textAlignment="center"
+      app:layout_constraintEnd_toStartOf="@+id/guideline01"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline01"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.07"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/black" />
+      android:id="@+id/view01"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/black"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline01"
+      app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/textViewPlayer1Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="-20" />
+      android:id="@+id/textViewPlayer1Score"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="-20"
+      android:textAlignment="center"
+      app:layout_constraintEnd_toStartOf="@+id/guideline02"
+      app:layout_constraintStart_toStartOf="@+id/guideline01"
+      app:layout_constraintTop_toTopOf="@+id/textViewRound"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/darker_gray" />
+      android:id="@+id/view02"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/darker_gray"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline02"
+      app:layout_constraintTop_toTopOf="parent"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline02"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.17"/>
 
     <TextView
-        android:id="@+id/textViewPlayer1Guess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="10" />
+      android:id="@+id/textViewPlayer1Guess"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="10"
+      android:textAlignment="textEnd"
+      app:layout_constraintEnd_toStartOf="@+id/guideline03"
+      app:layout_constraintStart_toStartOf="@+id/guideline02"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer1Score"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline03"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.225"/>
+    <View
+      android:id="@+id/view03"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/black"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline03"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.0"/>
+
+    <TextView
+      android:id="@+id/textViewPlayer2Score"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="-20"
+      app:layout_constraintEnd_toStartOf="@+id/guideline04"
+      app:layout_constraintStart_toStartOf="@+id/guideline03"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer1Guess"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline04"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.325"/>
+    <View
+      android:id="@+id/view04"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/darker_gray"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline04"
+      app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+      android:id="@+id/textViewPlayer2Guess"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="10"
+      app:layout_constraintEnd_toStartOf="@+id/guideline05"
+      app:layout_constraintStart_toStartOf="@+id/guideline04"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer2Score"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline05"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.38"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/black" />
+      android:id="@+id/view05"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/black"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline05"
+      app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/textViewPlayer2Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="-20" />
+      android:id="@+id/textViewPlayer3Score"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="-20"
+      app:layout_constraintEnd_toStartOf="@+id/guideline06"
+      app:layout_constraintStart_toStartOf="@+id/guideline05"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer2Guess"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline06"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.48"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/darker_gray" />
-
+      android:id="@+id/view06"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/darker_gray"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline06"
+      app:layout_constraintTop_toTopOf="parent"/>
     <TextView
-        android:id="@+id/textViewPlayer2Guess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
-        android:text="10" />
+      android:id="@+id/textViewPlayer3Guess"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="10"
+      app:layout_constraintEnd_toStartOf="@id/guideline07"
+      app:layout_constraintStart_toStartOf="@+id/guideline06"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer3Score"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline07"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.535"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/black" />
+      android:id="@+id/view07"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/black"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline07"
+      app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/textViewPlayer3Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="-20" />
+      android:id="@+id/textViewPlayer4Score"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="-20"
+      app:layout_constraintEnd_toStartOf="@+id/guideline08"
+      app:layout_constraintStart_toStartOf="@+id/guideline07"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer3Guess"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/darker_gray" />
+      android:id="@+id/view08"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/darker_gray"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline08"
+      app:layout_constraintTop_toTopOf="parent"/>
 
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline08"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.635"/>
     <TextView
-        android:id="@+id/textViewPlayer3Guess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="10" />
+      android:id="@+id/textViewPlayer4Guess"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="10"
+      app:layout_constraintEnd_toStartOf="@+id/guideline09"
+      app:layout_constraintStart_toStartOf="@+id/guideline08"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer4Score"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/black" />
+      android:id="@+id/view09"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/black"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline09"
+      app:layout_constraintTop_toTopOf="parent"/>
 
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline09"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.69"/>
     <TextView
-        android:id="@+id/textViewPlayer4Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="-20" />
+      android:id="@+id/textViewPlayer5Score"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="-20"
+      app:layout_constraintEnd_toStartOf="@+id/guideline10"
+      app:layout_constraintStart_toStartOf="@+id/guideline09"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer4Guess"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/darker_gray" />
+      android:id="@+id/view10"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/darker_gray"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline10"
+      app:layout_constraintTop_toTopOf="parent"/>
 
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline10"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.79"/>
     <TextView
-        android:id="@+id/textViewPlayer4Guess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="10" />
+      android:id="@+id/textViewPlayer5Guess"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="10"
+      app:layout_constraintEnd_toStartOf="@+id/guideline11"
+      app:layout_constraintStart_toStartOf="@+id/guideline10"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer5Score"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/black" />
+      android:id="@+id/view11"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/black"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline11"
+      app:layout_constraintTop_toTopOf="parent"/>
 
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline11"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.845"/>
     <TextView
-        android:id="@+id/textViewPlayer5Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="-20" />
+      android:id="@+id/textViewPlayer6Score"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="-20"
+      app:layout_constraintEnd_toStartOf="@+id/guideline12"
+      app:layout_constraintStart_toStartOf="@+id/guideline11"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer5Guess"/>
 
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/darker_gray" />
+      android:id="@+id/view12"
+      android:layout_width="2dp"
+      android:layout_height="0dp"
+      android:background="@android:color/darker_gray"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline12"
+      app:layout_constraintTop_toTopOf="parent"/>
 
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline12"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.945"/>
     <TextView
-        android:id="@+id/textViewPlayer5Guess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:text="10" />
+      android:id="@+id/textViewPlayer6Guess"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="10"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline12"
+      app:layout_constraintTop_toTopOf="@+id/textViewPlayer6Score"/>
 
-    <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/black" />
-
-    <TextView
-        android:id="@+id/textViewPlayer6Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="-20" />
-
-    <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:background="@android:color/darker_gray" />
-
-    <TextView
-        android:id="@+id/textViewPlayer6Guess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="10" />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
