replaced editText fields in dialog with number picker display a "-" in guess and score field when the are bids are not placed name of the player whose turn it is is bold

--- a/app/src/main/res/layout/dialog_tricks.xml
+++ b/app/src/main/res/layout/dialog_tricks.xml
@@ -1,73 +1,243 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="wrap_content"
-  android:layout_height="wrap_content">
+  android:layout_height="wrap_content"
+  android:orientation="vertical">
 
   <TextView
     android:id="@+id/textViewDialogTricks1"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="TextView"/>
-  <EditText
-    android:id="@+id/editTextDialogTricks1"
-    android:layout_width="match_parent"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:textAlignment="center"
+    app:layout_constraintBottom_toBottomOf="@+id/numberPickerDialog1"
+    app:layout_constraintEnd_toStartOf="@+id/numberPickerDialog1"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/numberPickerDialog1"
+    tools:text="Hans"/>
+
+  <com.shawnlin.numberpicker.NumberPicker
+    android:id="@+id/numberPickerDialog1"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:ems="10"
-    android:inputType="number"/>
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="1.00"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:np_dividerColor="@color/colorPrimary"
+    app:np_formatter="@string/number_picker_formatter"
+    app:np_height="@dimen/np_height"
+    app:np_max="20"
+    app:np_min="0"
+    app:np_orientation="horizontal"
+    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextSize="@dimen/selected_text_size"
+    app:np_textColor="@color/colorPrimary"
+    app:np_textSize="@dimen/text_size"
+    app:np_typeface="@string/roboto_light"
+    app:np_value="@integer/np_value"
+    app:np_wheelItemCount="@integer/np_wheel_item_count"
+    app:np_width="@dimen/np_width"/>
+
   <TextView
     android:id="@+id/textViewDialogTricks2"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="TextView"/>
-  <EditText
-    android:id="@+id/editTextDialogTricks2"
-    android:layout_width="match_parent"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:textAlignment="center"
+    app:layout_constraintBottom_toBottomOf="@+id/numberPickerDialog2"
+    app:layout_constraintEnd_toStartOf="@+id/numberPickerDialog2"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/numberPickerDialog2"
+    tools:text="Hans"/>
+
+  <com.shawnlin.numberpicker.NumberPicker
+    android:id="@+id/numberPickerDialog2"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:ems="10"
-    android:inputType="number"/>
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="1.00"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog1"
+    app:np_dividerColor="@color/colorPrimary"
+    app:np_formatter="@string/number_picker_formatter"
+    app:np_height="@dimen/np_height"
+    app:np_max="20"
+    app:np_min="0"
+    app:np_orientation="horizontal"
+    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextSize="@dimen/selected_text_size"
+    app:np_textColor="@color/colorPrimary"
+    app:np_textSize="@dimen/text_size"
+    app:np_typeface="@string/roboto_light"
+    app:np_value="@integer/np_value"
+    app:np_wheelItemCount="@integer/np_wheel_item_count"
+    app:np_width="@dimen/np_width"/>
+
   <TextView
     android:id="@+id/textViewDialogTricks3"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="TextView"/>
-  <EditText
-    android:id="@+id/editTextDialogTricks3"
-    android:layout_width="match_parent"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:textAlignment="center"
+    app:layout_constraintBottom_toBottomOf="@+id/numberPickerDialog3"
+    app:layout_constraintEnd_toStartOf="@+id/numberPickerDialog3"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/numberPickerDialog3"
+    tools:text="Hans"/>
+
+  <com.shawnlin.numberpicker.NumberPicker
+    android:id="@+id/numberPickerDialog3"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:ems="10"
-    android:inputType="number"/>
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="1.00"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog2"
+    app:np_dividerColor="@color/colorPrimary"
+    app:np_formatter="@string/number_picker_formatter"
+    app:np_height="@dimen/np_height"
+    app:np_max="20"
+    app:np_min="0"
+    app:np_orientation="horizontal"
+    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextSize="@dimen/selected_text_size"
+    app:np_textColor="@color/colorPrimary"
+    app:np_textSize="@dimen/text_size"
+    app:np_typeface="@string/roboto_light"
+    app:np_value="@integer/np_value"
+    app:np_wheelItemCount="@integer/np_wheel_item_count"
+    app:np_width="@dimen/np_width"/>
+
   <TextView
     android:id="@+id/textViewDialogTricks4"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="TextView"/>
-  <EditText
-    android:id="@+id/editTextDialogTricks4"
-    android:layout_width="match_parent"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:textAlignment="center"
+    app:layout_constraintBottom_toBottomOf="@+id/numberPickerDialog4"
+    app:layout_constraintEnd_toStartOf="@+id/numberPickerDialog4"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/numberPickerDialog4"
+    tools:text="Hans"/>
+
+  <com.shawnlin.numberpicker.NumberPicker
+    android:id="@+id/numberPickerDialog4"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:ems="10"
-    android:inputType="number"/>
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="1.00"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog3"
+    app:np_dividerColor="@color/colorPrimary"
+    app:np_formatter="@string/number_picker_formatter"
+    app:np_height="@dimen/np_height"
+    app:np_max="20"
+    app:np_min="0"
+    app:np_orientation="horizontal"
+    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextSize="@dimen/selected_text_size"
+    app:np_textColor="@color/colorPrimary"
+    app:np_textSize="@dimen/text_size"
+    app:np_typeface="@string/roboto_light"
+    app:np_value="@integer/np_value"
+    app:np_wheelItemCount="@integer/np_wheel_item_count"
+    app:np_width="@dimen/np_width"/>
+
   <TextView
     android:id="@+id/textViewDialogTricks5"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="TextView"/>
-  <EditText
-    android:id="@+id/editTextDialogTricks5"
-    android:layout_width="match_parent"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:textAlignment="center"
+    app:layout_constraintBottom_toBottomOf="@+id/numberPickerDialog5"
+    app:layout_constraintEnd_toStartOf="@+id/numberPickerDialog5"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/numberPickerDialog5"
+    tools:text="Hans"/>
+
+  <com.shawnlin.numberpicker.NumberPicker
+    android:id="@+id/numberPickerDialog5"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:ems="10"
-    android:inputType="number"/>
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="1.00"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog4"
+    app:np_dividerColor="@color/colorPrimary"
+    app:np_formatter="@string/number_picker_formatter"
+    app:np_height="@dimen/np_height"
+    app:np_max="20"
+    app:np_min="0"
+    app:np_orientation="horizontal"
+    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextSize="@dimen/selected_text_size"
+    app:np_textColor="@color/colorPrimary"
+    app:np_textSize="@dimen/text_size"
+    app:np_typeface="@string/roboto_light"
+    app:np_value="@integer/np_value"
+    app:np_wheelItemCount="@integer/np_wheel_item_count"
+    app:np_width="@dimen/np_width"/>
+
   <TextView
     android:id="@+id/textViewDialogTricks6"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="TextView"/>
-  <EditText
-    android:id="@+id/editTextDialogTricks6"
-    android:layout_width="match_parent"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:textAlignment="center"
+    app:layout_constraintBottom_toBottomOf="@+id/numberPickerDialog6"
+    app:layout_constraintEnd_toStartOf="@+id/numberPickerDialog6"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/numberPickerDialog6"
+    tools:text="Hans"/>
+
+  <com.shawnlin.numberpicker.NumberPicker
+    android:id="@+id/numberPickerDialog6"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:ems="10"
-    android:inputType="number"/>
-</LinearLayout>
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="1.00"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog5"
+    app:np_dividerColor="@color/colorPrimary"
+    app:np_formatter="@string/number_picker_formatter"
+    app:np_height="@dimen/np_height"
+    app:np_max="20"
+    app:np_min="0"
+    app:np_orientation="horizontal"
+    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextSize="@dimen/selected_text_size"
+    app:np_textColor="@color/colorPrimary"
+    app:np_textSize="@dimen/text_size"
+    app:np_typeface="@string/roboto_light"
+    app:np_value="@integer/np_value"
+    app:np_wheelItemCount="@integer/np_wheel_item_count"
+    app:np_width="@dimen/np_width"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
