--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,8 @@
 <resources>
   <dimen name="fab_margin">16dp</dimen>
+
+  <dimen name="selected_text_size">35dp</dimen>
+  <dimen name="text_size">30dp</dimen>
+  <dimen name="np_height">48dp</dimen>
+  <dimen name="np_width">150dp</dimen>
 </resources>
