preset of values when editing a round highlight lost and won rounds with colour

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
   <color name="colorAccent">#D81B60</color>
   <color name="colorAlternatingRowHighlight">#eeeeee</color>
   <color name="colorAlternatingRowNormal">#FFFFFF</color>
+  <color name="colorPositiveScore">#1b5e20</color>
+  <color name="colorNegativeScore">#b71c1c</color>
 </resources>
