--- a/app/src/main/res/layout/activity_manage_players.xml
+++ b/app/src/main/res/layout/activity_manage_players.xml
@@ -16,4 +16,16 @@
     app:layout_constraintTop_toTopOf="parent"
     tools:listitem="@layout/layout_player_listitem"/>
 
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/fab_margin"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_gravity="bottom|end"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:srcCompat="@android:drawable/ic_dialog_email"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
