--- a/app/src/main/res/menu/menu_game.xml
+++ b/app/src/main/res/menu/menu_game.xml
@@ -3,8 +3,9 @@
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.mnirwing.wizardscoreboard.MainActivity">
   <item
-    android:id="@+id/action_settings"
+    android:id="@+id/action_edit"
+    android:icon="@drawable/ic_baseline_edit_24px"
     android:orderInCategory="100"
-    android:title="Bla"
-    app:showAsAction="never"/>
+    android:title="@string/edit"
+    app:showAsAction="always"/>
 </menu>
