--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
   <color name="colorPrimary">#008577</color>
   <color name="colorPrimaryDark">#00574B</color>
   <color name="colorAccent">#D81B60</color>
-  <color name="colorAlternatingRowHighlight">#eeeeee</color>
+  <color name="colorHighlightedRow">#757575</color>
+  <color name="colorAlternatingRowHighlight">#E0E0E0</color>
   <color name="colorAlternatingRowNormal">#FFFFFF</color>
   <color name="colorPositiveScore">#1b5e20</color>
   <color name="colorNegativeScore">#b71c1c</color>
